# CSC402-Asst2

./: CMakeLists.txt  Util.cpp  Util.h  main.cpp
OOCompare/: IComparable.cpp  IComparable.h  IntCompare.cpp  IntCompare.h  IntWrapper.cpp  IntWrapper.h  StringCompare.cpp  StringCompare.h  StringWrapper.cpp  StringWrapper.h
TemplateCompare/: TIntWrapper.cpp  TIntWrapper.h  TStringWrapper.cpp  TStringWrapper.h
Wrappers/: IntWrapper.h
